# langchain-provider

./: README.md  pyproject.toml
langchain_provider/: __init__.py  client.py  provider.py
langchain_provider/widgets/: __init__.py  config_dialog.py  status.py
