[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-provider"
version = "0.2.0.dev0"
description = "Langchain provider for Griffin"
authors = [
    {name = "Griffin Developers", email = "info@griffin-analytics.com"},
]
license = {text = "MIT license"}
dependencies = ["langchain", "langchain-community", "openai", "qtawesome", "qtpy", "griffin"]
requires-python = ">= 3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

[project.optional-dependencies]
extras = ["pre-commit"]

[project.urls]
Homepage = "https://griffin-analytics.com/"

[project.entry-points."griffin.completions"]
langchain = "langchain_provider.provider:LangchainProvider"
